--- a/index.html
+++ b/index.html
@@ -515,91 +515,67 @@
         </section>
         <!--end of section 6-->
         <!--7 section-->
-        <section id="download_application" class="core__features features">
-            <div class="features__text">
-                <div class="application__box-line">
-                    <!--yellow line-->
-                    <h2 class="application__line">—</h2>
-                </div>
-                <div class="features__start">
-                    <div>
-                        <p class="features__name">Core Features</p>
+        <section id="download_application" class="core__features features" style="background:linear-gradient(0deg, rgb(33, 40, 61) 0%, #1a1c28 100%)">
+            <div class="features__coniner-text">
+                <div class="features__title">
+                    <div class="features__box-line">
+                        <h2 class="features__line">—</h2> 
                     </div>
-                    <div>
-                        <p class="features__believe">We believe in decentralized and reliable crypto exchange.</p>
+                    <div class="features__box-title">
+                        <p class="features__title">Core Features</p>
                     </div>
                 </div>
-
-                <div class="features__continue">
-                    <p class="features__question">Want more features?</p>
-                    <p class="features__link"> <a href="#">Contact us to share ideas! →</a></p>
+                <div>
+                    <p class="features__believe-text">We believe in decentralized and reliable crypto exchange.</p>
+                </div>
+                <div class="features__box-question">
+                    <div>
+                        <p class="features__question">Want more features?</p>
+                    </div>
+                    <div>
+                        <p class="features__question-link"> <a href="#" class="features__question-link">Contact us to share ideas! →</a></p>
+                    </div>
                 </div>
             </div>
-
             <div class="features__carousel">
-                <!--carousel-->
                 <div class="features__carousel-block">
-                    <!--carousel block one-->
-                    <!--img src="img/background_carousel.svg" alt="background carousel"> add class -->
                     <div class="features__carousel-gradient">
-                        <!-- полоса градіента -->
                     </div>
                     <div class="features__carousel-information">
-                        <p class="features__carousel-features">Zero Fee</p>
+                        <p class="features__carousel-title">Zero Fee</p>
                         <p class="features__carousel-benefit">Yes, the fee is really zero! In addition, we work with the
-                            best trading platforms and
-                            offer
-                            the best rate in the market. </p>
-                    </div><!-- add class -->
-                    <button></button><!-- add class -->
-                    <button></button><!-- add class -->
+                            best trading platforms and offer the best rate in the market. </p>
+                    </div>
                 </div>
 
                 <div class="features__carousel-block">
-                    <!--carousel block two-->
                     <div class="features__carousel-gradient">
-                        <!-- полоса градіента -->
                     </div>
                     <div class="features__carousel-information">
-                        <p class="features__carousel-features">Crypto to Fiat</p>
+                        <p class="features__carousel-title">Crypto to Fiat</p>
                         <p class="features__carousel-benefit">Thanks to our financial partners, you can use Visa or
-                            MasterCard to buy or sell
-                            cryptocurrencies on the platform.</p>
-                    </div><!-- add class -->
-                    <button></button><!-- add class -->
-                    <button></button><!-- add class -->
+                            MasterCard to buy or sell cryptocurrencies on the platform.</p>
+                    </div>
                 </div>
 
                 <div class="features__carousel-block">
-                    <!--carousel block three-->
                     <div class="features__carousel-gradient">
-                        <!-- полоса градіента -->
                     </div>
                     <div class="features__carousel-information">
-                        <p class="features__carousel-features">Oracle</p>
+                        <p class="features__carousel-title">Oracle</p>
                         <p class="features__carousel-benefit">We partner with Oracle iService for the implementation of
-                            cross-platform data services
-                            within
-                            blockchain and off-chain.</p>
-                    </div><!-- add class -->
-                    <button></button><!-- add class -->
-                    <button></button><!-- add class -->
+                            cross-platform data services within blockchain and off-chain.</p>
+                    </div>
                 </div>
 
                 <div class="features__carousel-block">
-                    <!--carousel block four-->
                     <div class="features__carousel-gradient">
-                        <!-- полоса градіента -->
                     </div>
                     <div class="features__carousel-information">
-                        <p class="features__carousel-features">NTF</p>
+                        <p class="features__carousel-title">NTF</p>
                         <p class="features__carousel-benefit">Cryptochange now supports the new trendy technology of NFT
-                            to achieve the digitization of
-                            any
-                            analog assets on blockchain. </p>
-                    </div><!-- add class -->
-                    <button></button><!-- add class -->
-                    <button></button><!-- add class -->
+                            to achieve the digitization of any analog assets on blockchain. </p>
+                    </div>
                 </div>
             </div>
 
@@ -608,30 +584,27 @@
 
                     <div class="application__download">
                         <div class="application__box-line">
-                            <!--yellow line-->
                             <h2 class="application__line">—</h2>
                         </div>
                         <div>
-                            <h2 class="application__call"> Download Our Demo Application</h2>
+                            <h2 class="application__title"> Download Our Demo Application</h2>
                         </div>
                     </div>
                     <div>
-                        <p class="application__action">Try all the available features for free and exchange
-                            cryptocurrency
-                            with ease.</p>
+                        <p class="application__offer">Try all the available features for free and exchange
+                            cryptocurrency with ease.</p>
                     </div>
 
                     <div class="application__advantage advantage">
                         <ul>
-                            <!-- add class -->
                             <li class="advantage__block">
                                 <div class="advantage__icon-box">
                                     <div class="advantage__icon">
-                                        <img src="img/icon_wallet.svg" alt="icon wallet">
+                                        <img class="advantage__icon" src="img/icon_wallet.svg" alt="icon wallet">
                                     </div>
                                 </div>
-                                <div class="advantage__text">
-                                    <div class="advantage__name">
+                                <div class="advantage__block-text">
+                                    <div class="advantage__title">
                                         <p>Manage Your Wallet</p>
                                     </div>
                                     <div class="advantage__description">
@@ -646,8 +619,8 @@
                                     </div>
                                 </div>
 
-                                <div class="advantage__text">
-                                    <div class="advantage__name">
+                                <div class="advantage__block-text">
+                                    <div class="advantage__title">
                                         <p>Get Instant Notifications</p>
                                     </div>
                                     <div class="advantage__description">
@@ -662,8 +635,8 @@
                                     </div>
                                 </div>
 
-                                <div class="advantage__text">
-                                    <div class="advantage__name">
+                                <div class="advantage__block-text">
+                                    <div class="advantage__title">
                                         <p>Get Instant Notifications</p>
                                     </div>
                                     <div class="advantage__description">
@@ -685,9 +658,9 @@
                 <div class="application__view">
                     <div class="application__background">
                         <img src="img/background_phone.webp" alt="background phone">
-                        <div class="application__phone">
-                            <img src="img/phone_screen.png" width="100" alt="phone screen">
-                        </div>
+                        <!--div class="application__phone">
+                            <img  src="img/phone_screen.png" width="200" alt="phone screen">
+                        </div-->
                     </div>
                 </div>
             </div>
@@ -699,7 +672,7 @@
                         </div>
                         <div>
                             <p class="banner__description">Learn more about our project and cryptonomics.<a
-                                    href="#">Download
+                                    href="#" class="banner__description-question"> Download
                                     Now ↓</a></p>
                         </div>
                     </div>
