--- a/index.html
+++ b/index.html
@@ -672,15 +672,15 @@
                 </div>
                 <div class="application__view">
                     <div class="application__background">
-                        <img src="img/background_phone.webp" alt="background phone">
-                        <!--div class="application__phone">
-                            <img  src="img/phone_screen.png" width="200" alt="phone screen">
+                        <img src="img/phone_screen.png" alt="phone screen">
+                        <!--img src="img/background_phone.webp" alt="background phone"-->
+                        <!--div class="application__phone-block">
+                            <img class="application__phone" src="img/phone_screen.png" width="200" alt="phone screen">
                         </div-->
                     </div>
                 </div>
             </div>
             <div class="banner__wraper">
-<<<<<<< HEAD
                 <div class="banner__background">
                     <div class="banner__download">
                         <div>
@@ -690,19 +690,6 @@
                             <p class="banner__description">Learn more about our project and cryptonomics.<a
                                     href="#" class="banner__description-question"> Download
                                     Now ↓</a></p>
-=======
-                    <div class="banner__background">
-                        <div class="banner__download">
-                            <div>
-                                <h2 class="banner__call">Download Whitepaper</h2>
-                            </div>
-                            <div>
-                                <p class="banner__description">Learn more about our project and cryptonomics.<a
-                                   
-                                    href="#">Download
-                                            Now ↓</a></p>
-                            </div>
->>>>>>> c1f523925ae5be18f10d9b732ef3c4cf32fc31ea
                         </div>
                     </div>
             </div>
