--- a/index.html
+++ b/index.html
@@ -600,12 +600,13 @@
                 <div class="application__text">
 
                     <div class="application__download">
-                        <div class="application__box-line">
+                        <!--div class="application__box-line">
                             <h2 class="application__line">—</h2>
-                        </div>
-                        <div>
-                            <h2 class="application__title"> Download Our Demo Application</h2>
-                        </div>
+                        </div-->
+                        <!--div-->
+                            <h2 class="application__line application__box-line">—</h2>
+                            <h2 class="application__title">Download Our Demo Application</h2>
+                        <!--/div-->
                     </div>
                     <div>
                         <p class="application__offer">Try all the available features for free and exchange
