--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
             <a class="header__banner-download" href="#">Download Whitepaper →</a>
         </div>
     </header>
-    <main>
+<main>
         <!--2 section-->
         <!--add class name into tags (p,button,div)-->
-        <section id="why__cryptochange" class="why__wrapper">
             <section id="why__cryptochange" class="why__wrapper">
                 <div class="why__cryptochange-block">
                     <div class="main__why__cryptochange-conteiner">
@@ -691,6 +690,7 @@
                                     Now ↓</a></p>
                         </div>
                     </div>
+                </div>
             </div>
         </section>
         <!--end of section 7-->
