--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                     <div class="paginator__wrapper">
-                        <div class="button__left"><Button id="left_btn">&#60</Button></div>
+                        <div class="button__left"><Button id="left_btn"></Button></div>
                         <div class="block__group">
                             <div class="block__one-ol">
                                 <div class="anycash__one">
@@ -191,7 +191,7 @@
                                 <img class="moonpay" src="img/moonpay.svg" alt="moonpay" width="100">
                             </div>
                         </div>
-                        <div class="button__right"><Button id="right_btn">&#62</Button></div>
+                        <div class="button__right"><Button id="right_btn"></Button></div>
                     </div>
                 </div>
         </section>
