completed all the small details in the header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 
-<body>
+<body class="">
     <header class="header container">
         <div class='heder__burger-open'>
         </div>
@@ -38,19 +38,19 @@
             </div>
             <div class="header__menu  container" >
                 <ul class="header__menu-list list">
-                    <li class="list__about-container">
+                    <li class="list__about-container list" >
                         <a class="list__about-link header__list" href="#why__cryptochange">About</a>
-                    <li class="list__roadmap-container">
+                    <li class="list__roadmap-container list">
                         <a class="list__roadmap-link header__list" href="#roadmap">Roadmap</a>
-                    <li class="list__app-container">
+                    <li class="list__app-container list">
                         <a class="list__app-link header__list" href="#download_application">App</a>
-                    <li class="list__team-container">
+                    <li class="list__team-container list">
                         <a class="list__team-link header__list" href="#team">Team</a>
-                    <li class="list__press-container">
+                    <li class="list__press-container list">
                         <a class="list__press-link header__list" href="#press">Press</a>
-                    <li class="list__feedback-container">
+                    <li class="list__feedback-container list">
                         <a class="list__feedback-link header__list" href="#feedback">Feedback</a>
-                    <li class="list__news-container ">
+                    <li class="list__news-container list">
                         <a class="list__news-link header__list" href="#news">News</a>
                     </li>
                 </ul>
@@ -73,7 +73,7 @@
             <a class="header__banner-download" href="#">Download Whitepaper →</a>
         </div>
     </header>
-<main>
+<main class="">
         <!--2 section-->
         <!--add class name into tags (p,button,div)-->
             <section id="why__cryptochange" class="why__wrapper">
