--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
         <!--add class name into tags (p,button,div)-->
             <section id="why__cryptochange" class="why__wrapper">
                 <div class="why__cryptochange-block">
-                    <div class="main__why__cryptochange-conteiner">
                     <div class="text__wrapper">
                         <h2 class="why__header"><span class="yellow__line-o">-</span>Why cryptochange?</h2> <!--сменил с 14 позиции на 15-->
                         <div class="text__container-bolt-font">
@@ -100,57 +99,57 @@
                                     <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 </div>
                                 <div class="yellow__arrow">
-                                    <p>Based on</p>
-                                  <p><a href="https://en.wikipedia.org/wiki/Blockchain">Blockchain</a></p>
+                                    <p class="textwhite">Based on</p>
+                                  <p class="textwhite"><a class="global__white" href="https://en.wikipedia.org/wiki/Blockchain">Blockchain</a></p>
                                 </div>
                             </div>
                             <div class="yellow__arrow">
                                 <div class="yellow__arrow">
                                     <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 </div>
-                                <p><a href="https://en.wikipedia.org/wiki/Global_Payments">Global Payments</a></p>
+                                <p class="textwhite"><a class="global__white" href="https://en.wikipedia.org/wiki/Global_Payments">Global Payments</a></p>
                             </div>
                             <div class="yellow__arrow">
                                 <div class="crypto__to-fait">
                                     <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 </div>
-                                <p>Crypto to Fiat</p>
+                                <p class="textwhite">Crypto to Fiat</p>
                             </div>
                             <div class="yellow__arrow">
                                 <div class="instant__transactions">
                                     <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 </div>
-                                <p>Instant Transactions</p>
+                                <p class="textwhite">Instant Transactions</p>
                             </div>
                             <div class="yellow__arrow">
                                 <div class="free__of-custody">
                                     <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 </div>
-                                <p>Free of Custody</p>
+                                <p class="textwhite">Free of Custody</p>
                             </div>
                             <div class="yellow__arrow">
                                 <div class="the__best-rates">
                                     <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 </div>
-                                <p>The Best Rates</p>
+                                <p class="textwhite">The Best Rates</p>
                             </div>
                             <div class="yellow__arrow">
                                 <div class="all__types__of-altcoins">
                                     <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 </div>
-                                <p>All Types of Altcoins</p>
+                                <p class="textwhite">All Types of Altcoins</p>
                             </div>
                             <div class="yellow__arrow">
                                 <div class="ptwop__payments">
                                     <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 </div>
-                                <p>P2P Payments</p>
+                                <p class="textwhite">P2P Payments</p>
                             </div>
                             <div class="yellow__arrow">
                                 <div class="reliable__service">
                                     <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 </div>
-                                <p>Reliable Service</p>
+                                <p class="textwhite">Reliable Service</p>
                             </div>
                         </div>
                     </div>
