carousel first rev

--- a/index.html
+++ b/index.html
@@ -552,6 +552,18 @@
                 </div>
             </div>
             <div class="features__carousel">
+                <div class="background_carousel__test">
+                    <div class="features__carousel-information-test">
+                        <p class="features__carousel-title">Zero Fee</p>
+                        <p class="features__carousel-benefit">Yes, the fee is really zero! In addition, we work with the
+                            best trading platforms and offer the best rate in the market. </p>
+                    </div>
+                </div>
+                <div class="products-carousel">
+                    <button class="products-carousel__prev">←</button>
+                    <div class="products-carousel__slider"></div>
+                    <button class="products-carousel__next">→</button>
+                </div>
                 <div class="features__carousel-block">
                     <div class="features__carousel-gradient">
                     </div>
@@ -1310,5 +1322,6 @@
         </div>
     </footer>
     <script src="js/heder-burger.js"></script>
+    <script src="js/products-carousel.js"></script>
 </body>
 </html>
