created slider in ico-progress

--- a/index.html
+++ b/index.html
@@ -217,11 +217,20 @@
                             <a class="ico-progress__button button" href="#">Buy CRP Tokens</a>
                         </div>
                     </div>
-                    <div class="ico-progress__image">
-                        <img class="ico-progress__image" width="200" src="img/cryptocurrency-chart.jpg"
-                            alt="cryptocurrency chart">
+                    <div class="ico-progress__slider">
+                        <div class="ico-progress__slider-container">
+                            <img class="ico-progress__image" src="img/ico_progress_slider/cryptocurrency_chart.jpg"
+                                alt="cryptocurrency chart">
+                            <img src="img/ico_progress_slider/cryptocurrency_chart_two.jpg"
+                                alt="second cryptocurrency chart">
+                            <img src="img/ico_progress_slider/cryptocurrency_chart_three.jpg"
+                                alt="third cryptocurrency chart">
+                        </div>
+                        <div class="ico-progress__slider-buttons">
+                            <button class = "slider-prev">&#8610;</button>
+                            <button class = "slider-next">&#8611;</button>
+                        </div>
                     </div>
-
                 </div>
             </div>
         </section>
@@ -1325,6 +1334,7 @@
         </div>
     </footer>
     <script src="js/clock.js"></script>
+    <script src="js/ico_progress_slider.js"></script>
 </body>
 
 </html>
