--- a/index.html
+++ b/index.html
@@ -552,56 +552,32 @@
                 </div>
             </div>
             <div class="features__carousel">
-                <div class="background_carousel__test">
-                    <div class="features__carousel-information-test">
-                        <p class="features__carousel-title">Zero Fee</p>
-                        <p class="features__carousel-benefit">Yes, the fee is really zero! In addition, we work with the
-                            best trading platforms and offer the best rate in the market. </p>
-                    </div>
-                </div>
                 <div class="products-carousel">
-                    <button class="products-carousel__prev">←</button>
-                    <div class="products-carousel__slider"></div>
-                    <button class="products-carousel__next">→</button>
-                </div>
-                <div class="features__carousel-block">
-                    <div class="features__carousel-gradient">
-                    </div>
-                    <div class="features__carousel-information">
-                        <p class="features__carousel-title">Zero Fee</p>
-                        <p class="features__carousel-benefit">Yes, the fee is really zero! In addition, we work with the
-                            best trading platforms and offer the best rate in the market. </p>
-                    </div>
-                </div>
+                    <button class="products-carousel__prev">
+                        <div class="slider-arrow__click-zone_uLX"></div>
+                        <svg class="arrow-svg_1j4" viewBox="0 0 30 30">
+                            <defs>
+                                <path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1675354765525">
+                                </path>
+                            </defs>
+                            <use fill-rule="nonzero" opacity=".8" xlink:href="#a-1675354765525">
+                            </use>
+                        </svg>
+                    </button>
 
-                <div class="features__carousel-block">
-                    <div class="features__carousel-gradient">
-                    </div>
-                    <div class="features__carousel-information">
-                        <p class="features__carousel-title">Crypto to Fiat</p>
-                        <p class="features__carousel-benefit">Thanks to our financial partners, you can use Visa or
-                            MasterCard to buy or sell cryptocurrencies on the platform.</p>
-                    </div>
-                </div>
+                    <div class="products-carousel__slides"></div>
 
-                <div class="features__carousel-block">
-                    <div class="features__carousel-gradient">
-                    </div>
-                    <div class="features__carousel-information">
-                        <p class="features__carousel-title">Oracle</p>
-                        <p class="features__carousel-benefit">We partner with Oracle iService for the implementation of
-                            cross-platform data services within blockchain and off-chain.</p>
-                    </div>
-                </div>
-
-                <div class="features__carousel-block">
-                    <div class="features__carousel-gradient">
-                    </div>
-                    <div class="features__carousel-information">
-                        <p class="features__carousel-title">NTF</p>
-                        <p class="features__carousel-benefit">Cryptochange now supports the new trendy technology of NFT
-                            to achieve the digitization of any analog assets on blockchain. </p>
-                    </div>
+                    <button class="products-carousel__next">
+                        <div class="slider-arrow__click-zone_uLX"></div>
+                        <svg class="arrow-svg_1j4" viewBox="0 0 30 30">
+                            <defs>
+                                <path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1675354765525">
+                                </path>
+                            </defs>
+                            <use fill-rule="nonzero" opacity=".8" xlink:href="#a-1675354765525">
+                            </use>
+                        </svg>
+                    </button>
                 </div>
             </div>
 
