--- a/index.html
+++ b/index.html
@@ -844,34 +844,57 @@
                 </div>
                 <!--<div class="press__slider"></div>-->
                 <div class="press__media_carousel-container">
-                    <div class="arrow" id="prev">
-                        <img class="arrow-img" src="" alt="Previous price" />
+                    <div class="press__media_arrow" id="prev">
+                        <img class="press__media_arrow-img" src="img/press_media_arrow_left.png" alt="Previous price" />
                     </div>
                     <div class="press__media_carousel_slider">
                         <div class="press__media_carousel_slide" data-slide="1">
-                            <div class="slide__content">
-                                <div class="press__media_slide_content-item">
-                                    <p>«Cryptocurrency exchange has never been so easy and elegant.
-                                        Cryptochange is what the crypto market lacked so much to be considered
-                                        a full-fledged financial sphere.»
-                                    </p>
-                                    <img src="img/" />
-                                </div>
+
+                            <div class="press__media_slide_content-item">
+                                <p class="press__media_slider-paragr">«Cryptocurrency exchange has never been so
+                                    easy and elegant.
+                                    Cryptochange is what the crypto market lacked so much to be considered
+                                    a full-fledged financial sphere.»
+                                </p>
+                                <img class="press__media_slider-img" src="img/edge.svg" alt="Edge" />
+                                <span class="press__media_divider">-</span>
+                                <p class="press__name">The Edge, April 2022</p>
                             </div>
+
                         </div>
                         <div class="press__media_carousel_slide" data-slide="2">
-                            <div class="slide__content">
-                                <div class="press__media_slide_content-item">
-                                    <p>«Cryptocurrency exchange has never been so easy and elegant.
-                                        Cryptochange is what the crypto market lacked so much to be considered
-                                        a full-fledged financial sphere.»
-                                    </p>
-                                </div>
+
+                            <div class="press__media_slide_content-item">
+                                <p class="press__media_slider-paragr">«Cryptocurrency exchange has never been so easy
+                                    and elegant.
+                                    Cryptochange is what the crypto market lacked so much to be considered
+                                    a full-fledged financial sphere.»
+                                </p>
+                                <img class="press__media_slider-img" src="img/usa_today.svg" alt="USA Today" />
+                                <span class="press__media_divider">-</span>
+                                <p class="press__name">USA Today, November 2022</p>
                             </div>
                         </div>
+
+                        <div class="press__media_carousel_slide" data-slide="3">
+
+                            <div class="press__media_slide_content-item">
+                                <p class="press__media_slider-paragr">«Cryptocurrency exchange has never been so easy
+                                    and
+                                    elegant.
+                                    Cryptochange is what the crypto market lacked so much to be considered
+                                    a full-fledged financial sphere.»
+                                </p>
+                                <img class="press__media_slider-img" src="img/new_york_times.svg"
+                                    alt="The New York Times" />
+                                <span class="press__media_divider">-</span>
+                                <p class="press__name">The New York Times, May 2022</p>
+                            </div>
+
+                        </div>
                     </div>
-                    <div class="arrow" id="next">
-                        <img class="arrow-img" src="img/pricing/arrow-right.png" alt="Next price" />
+                    <div class="press__media_arrow" id="next">
+                        <img class="press__media_arrow-img" src="img/press_media_arrow_right.png" alt="Next price" />
                     </div>
                 </div>
                 <!--end slider-->
@@ -1347,6 +1370,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/media-newspapers.js"></script>
     <script src="js/heder-burger.js"></script>
     <script src="js/products-carousel.js"></script>
     <script src="js/clock.js"></script>
