--- a/index.html
+++ b/index.html
@@ -849,48 +849,48 @@
                     </div>
                     <div class="press__media_carousel_slider">
                         <div class="press__media_carousel_slide" data-slide="1">
-
-                            <div class="press__media_slide_content-item">
-                                <p class="press__media_slider-paragr">«Cryptocurrency exchange has never been so
-                                    easy and elegant.
-                                    Cryptochange is what the crypto market lacked so much to be considered
-                                    a full-fledged financial sphere.»
-                                </p>
-                                <img class="press__media_slider-img" src="img/edge.svg" alt="Edge" />
-                                <span class="press__media_divider">-</span>
-                                <p class="press__name">The Edge, April 2022</p>
+                            <div class="press__media_slide_content">
+                                <div class="press__media_slide_content-item">
+                                    <p class="press__media_slider-paragr">
+                                        «Cryptocurrency exchange has never been so
+                                        easy and elegant.
+                                        Cryptochange is what the crypto market lacked so much to be considered
+                                        a full-fledged financial sphere.»
+                                    </p>
+                                    <img class="press__media_slider-img" src="img/edge.svg" alt="Edge" />
+                                    <span class="press__media_divider">-</span>
+                                    <p class="press__name">The Edge, April 2022</p>
+                                </div>
                             </div>
-
                         </div>
                         <div class="press__media_carousel_slide" data-slide="2">
-
-                            <div class="press__media_slide_content-item">
-                                <p class="press__media_slider-paragr">«Cryptocurrency exchange has never been so easy
-                                    and elegant.
-                                    Cryptochange is what the crypto market lacked so much to be considered
-                                    a full-fledged financial sphere.»
-                                </p>
-                                <img class="press__media_slider-img" src="img/usa_today.svg" alt="USA Today" />
-                                <span class="press__media_divider">-</span>
-                                <p class="press__name">USA Today, November 2022</p>
+                            <div class="press__media_slide_content">
+                                <div class="press__media_slide_content-item">
+                                    <p class="press__media_slider-paragr">
+                                        «Cryptocurrency exchange has never been so easy and elegant.
+                                        Cryptochange is what the crypto market lacked so much to be considered
+                                        a full-fledged financial sphere.»
+                                    </p>
+                                    <img class="press__media_slider-img" src="img/new_york_times.svg"
+                                        alt="The New York Times" />
+                                    <span class="press__media_divider">-</span>
+                                    <p class="press__name">The New York Times, May 2022</p>
+                                </div>
                             </div>
                         </div>
-
                         <div class="press__media_carousel_slide" data-slide="3">
-
-                            <div class="press__media_slide_content-item">
-                                <p class="press__media_slider-paragr">«Cryptocurrency exchange has never been so easy
-                                    and
-                                    elegant.
-                                    Cryptochange is what the crypto market lacked so much to be considered
-                                    a full-fledged financial sphere.»
-                                </p>
-                                <img class="press__media_slider-img" src="img/new_york_times.svg"
-                                    alt="The New York Times" />
-                                <span class="press__media_divider">-</span>
-                                <p class="press__name">The New York Times, May 2022</p>
+                            <div class="press__media_slide_content">
+                                <div class="press__media_slide_content-item">
+                                    <p class="press__media_slider-paragr">
+                                        «Cryptocurrency exchange has never been so easy and elegant.
+                                        Cryptochange is what the crypto market lacked so much to be considered
+                                        a full-fledged financial sphere.»
+                                    </p>
+                                    <img class="press__media_slider-img" src="img/usa_today.svg" alt="USA Today" />
+                                    <span class="press__media_divider">-</span>
+                                    <p class="press__name">USA Today, November 2022</p>
+                                </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="press__media_arrow" id="next">
