--- a/index.html
+++ b/index.html
@@ -837,6 +837,7 @@
 
 
             </div>
+            
             <div id="press" class="press__media">
                 <div class="title__container">
                     <span class="title__line">-</span>
@@ -871,7 +872,7 @@
                                         Cryptochange is what the crypto market lacked so much to be considered
                                         a full-fledged financial sphere.»
                                     </p>
-                                    <img class="press__media_slider-img" src="img/new_york_times.svg"
+                                    <img class="press__media_slider-img-times" src="img/new_york_times.svg"
                                         alt="The New York Times" />
                                     <span class="press__media_divider">-</span>
                                     <p class="press__name">The New York Times, May 2022</p>
@@ -893,6 +894,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="press__media_arrow" id="next">
                         <img class="press__media_arrow-img" src="img/press_media_arrow_right.png" alt="Next price" />
                     </div>
