--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section id="why__cryptochange" class="why__wrapper">
             <div class="why__cryptochange-block">
                 <div class="text__wrapper">
-                    <h2 class="why__header"><span class="yellow__line-o">-</span>Why cryptochange?</h2>
+                    <h2 class="why__header"><span class="yellow__line-o">- </span>Why cryptochange?</h2>
                     <!--сменил с 14 позиции на 15-->
                     <div class="text__container-bolt-font">
                         <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <div class="paginator__wrapper">
-                <div class="button__left"><Button id="left_btn"></Button></div>
+                <div class="button__left" id="left_btn"><img class="press__media_arrow-img" src="img/press_media_arrow_left.png" alt="Prise left"></div>
                 <div class="block__group">
                     <div class="block__one-ol">
                         <div class="anycash__one">
@@ -194,7 +194,7 @@
                         <img class="moonpay" src="img/moonpay.svg" alt="moonpay" width="100">
                     </div>
                 </div>
-                <div class="button__right"><Button id="right_btn"></Button></div>
+                <div class="button__right" id="right_btn"><img class="press__media_arrow-img" src="img/press_media_arrow_right.png" alt="Prise right"></div>
             </div>
         </section>
         <!--end of 2 section-->
