--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
 
 
             </div>
-            
+
             <div id="press" class="press__media">
                 <div class="title__container">
                     <span class="title__line">-</span>
@@ -858,9 +858,11 @@
                                         Cryptochange is what the crypto market lacked so much to be considered
                                         a full-fledged financial sphere.»
                                     </p>
-                                    <img class="press__media_slider-img" src="img/edge.svg" alt="Edge" />
-                                    <span class="press__media_divider">-</span>
-                                    <p class="press__name">The Edge, April 2022</p>
+                                    <div class="press__media_slider-img-container">
+                                        <img class="press__media_slider-img" src="img/edge.svg" alt="Edge" />
+                                        <span class="press__media_divider">-</span>
+                                        <p class="press__name">The Edge, April 2022</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -872,10 +874,12 @@
                                         Cryptochange is what the crypto market lacked so much to be considered
                                         a full-fledged financial sphere.»
                                     </p>
-                                    <img class="press__media_slider-img-times" src="img/new_york_times.svg"
-                                        alt="The New York Times" />
-                                    <span class="press__media_divider">-</span>
-                                    <p class="press__name">The New York Times, May 2022</p>
+                                    <div class="press__media_slider-img-container">
+                                        <img class="press__media_slider-img-times" src="img/new_york_times.svg"
+                                            alt="The New York Times" />
+                                        <span class="press__media_divider">-</span>
+                                        <p class="press__name">The New York Times, May 2022</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -887,14 +891,16 @@
                                         Cryptochange is what the crypto market lacked so much to be considered
                                         a full-fledged financial sphere.»
                                     </p>
-                                    <img class="press__media_slider-img" src="img/usa_today.svg" alt="USA Today" />
-                                    <span class="press__media_divider">-</span>
-                                    <p class="press__name">USA Today, November 2022</p>
+                                    <div class="press__media_slider-img-container">
+                                        <img class="press__media_slider-img" src="img/usa_today.svg" alt="USA Today" />
+                                        <span class="press__media_divider">-</span>
+                                        <p class="press__name">USA Today, November 2022</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="press__media_arrow" id="next">
                         <img class="press__media_arrow-img" src="img/press_media_arrow_right.png" alt="Next price" />
                     </div>
