--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
                 </div>
             </div>
             <div class="paginator__wrapper">
-                <div class="button__left" id="left_btn"><img class="press__media_arrow-img" src="img/press_media_arrow_left.png" alt="Prise left"></div>
+                <div class="button__left" id="left_btn"><img class="press__media_arrow-img"
+                        src="img/press_media_arrow_left.png" alt="Prise left"></div>
                 <div class="block__group">
                     <div class="block__one-ol">
                         <div class="anycash__one">
@@ -194,7 +195,8 @@
                         <img class="moonpay" src="img/moonpay.svg" alt="moonpay" width="100">
                     </div>
                 </div>
-                <div class="button__right" id="right_btn"><img class="press__media_arrow-img" src="img/press_media_arrow_right.png" alt="Prise right"></div>
+                <div class="button__right" id="right_btn"><img class="press__media_arrow-img"
+                        src="img/press_media_arrow_right.png" alt="Prise right"></div>
             </div>
         </section>
         <!--end of 2 section-->
